Refactor frontend boundaries and centralize output target parsing
Assisted-by: codex:gpt-5.6-sol